# krankulator

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  TODO.md
.githooks/: pre-commit
.github/workflows/: deploy.yml  release.yml  rust.yml
core/: Cargo.toml
core/examples/: mapper_smoke.rs
core/src/: lib.rs
core/src/emu/: dbg.rs  debug.rs  integration_tests.rs  mod.rs  region.rs  rewind.rs  savestate.rs
core/src/emu/apu/: frame_counter.rs  mod.rs
core/src/emu/apu/channels/: dmc.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
core/src/emu/audio/: mod.rs  wav.rs
core/src/emu/cpu/: disasm.rs  mod.rs  opcodes.rs
core/src/emu/gfx/: buf.rs  font.rs  mod.rs  overlay.rs  palette.rs
core/src/emu/gfx/shaders/: crt_lottes.wgsl  crt_lottes_web.frag  crt_lottes_web.vert
core/src/emu/io/: controller.rs  loader.rs  log.rs  mod.rs
core/src/emu/memory/: mod.rs
core/src/emu/memory/mapper/: action53.rs  axrom.rs  bandai_fcg.rs  bandai_karaoke.rs  bnrom.rs  camerica.rs  cnrom.rs  color_dreams.rs  cprom.rs  daou.rs  front_fareast.rs  gxrom.rs  irem_g101.rs  irem_h3001.rs  jaleco_jf.rs  jaleco_ss88006.rs  k1029.rs  mapper31.rs  mapper77.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  mod.rs  namco108.rs  namco163.rs  namco175_340.rs  nes_event.rs  nrom.rs  oeka_kids.rs  simple.rs  sunsoft3.rs  sunsoft4.rs  sunsoft_fme7.rs  taito.rs  taito_x1005.rs  taito_x1017.rs  unrom512.rs  uxrom.rs  (+6 more)
core/src/emu/ppu/: mod.rs
core/src/util/: mod.rs
desktop/: Cargo.toml  build.rs
desktop/assets/: Info.plist  krankulator.desktop
desktop/src/: audio.rs  bindings.rs  bindings_ui.rs  debug_ui.rs  gamepad.rs  io.rs  main.rs  settings.rs
desktop/src/bindings/: data.rs  mod.rs  ui.rs
desktop/src/debug/: common.rs  gtk.rs  mod.rs  winit.rs
desktop/src/io/: gtk_backend.rs  mod.rs  winit_backend.rs
docs/: apu-fix-plan.md  cycle-accurate-rendering-plan.md  per-cycle-cpu-plan.md  web-build-plan.md  web-dev-setup.md
input/: adc_zeropage  instructions  jmp  jsrtrs  ldasta  sbc  snake  stores  take_all_branches  take_no_branch  transfers
input/ascii/: beq  bne  compares  inf  stackloop
input/nes/: AccuracyCoin.nes
libretro/: Cargo.toml  krankulator_libretro.info
libretro/src/: lib.rs  libretro_sys.rs
opcodes/: generate_opcodes.py  opcodes.txt
scripts/: analyze_audio.py  requirements.txt  rom_inventory.py  test_klaus2m5.sh  verify_mappers.py
src/: main.rs
src/asm/: util.rs
src/cpu/: mod.rs  opcodes.rs
src/emu/: audio.rs  cpu.rs  dbg.rs  io.rs  loaders.rs  log.rs  logging.rs  memory.rs  mod.rs  opcodes.rs  savestate.rs
src/emu/apu/: frame_counter.rs  mod.rs
src/emu/apu/channels/: dmc.rs  noise.rs  pulse.rs  triangle.rs
src/emu/audio/: mod.rs
src/emu/cpu/: mod.rs  opcodes.rs
src/emu/gfx/: buf.rs  mod.rs  palette.rs
src/emu/io/: controller.rs  loader.rs  log.rs  mod.rs
src/emu/memory/: mapper.rs  mod.rs
src/emu/memory/mapper/: axrom.rs  cnrom.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc5.rs  mod.rs  nrom.rs  uxrom.rs
src/emu/ppu/: mod.rs
src/util/: mod.rs
web/: Cargo.toml  Trunk.toml  index.html
web/assets/: CNAME  audio_processor.js  list.json
web/src/: audio.rs  crt_renderer.rs  input.rs  io.rs  lib.rs  loading_screen.rs  persistence.rs
worker/: README.md  wrangler.toml
worker/.wrangler/cache/: wrangler-account.json
worker/src/: index.js
