[package]
name = "krankulator"
version = "0.1.0"
authors = ["Anders Åstrand <aastrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
rand = "0.7.3"
clap = "3.0.0-beta.1"
shrust = "0.0.7"
signal-hook = "0.1.15"

[dependencies.pancurses]
version = "0.16.1"
features = ["wide"]
