[package]
name = "krankulator-desktop"
version = "1.0.0"
authors = ["Anders Åstrand <anders@teknodromen.se>"]
edition = "2021"
license-file.workspace = true

[[bin]]
name = "krankulator"
path = "src/main.rs"

[dependencies]
krankulator-core = { path = "../core" }
clap = { version = "3.1.1", features = ["derive"] }
winit = "0.30"
pixels = "0.17"
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
rodio = "0.17"
rfd = "0.15"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
ringbuf = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
shrust = "0.0.7"
muda = "0.19.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-game-controller = { version = "0.3", features = ["GCController", "GCExtendedGamepad", "GCControllerButtonInput", "GCControllerDirectionPad", "GCControllerAxisInput", "GCControllerElement", "GCExtendedGamepadSnapshot"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
gilrs = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
glow = "0.16"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
