[package]
name = "krankulator-web"
version = "0.1.0"
authors = ["Anders Åstrand <anders@teknodromen.se>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
krankulator-core = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "EventTarget",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioNode",
    "AudioDestinationNode",
    "BaseAudioContext",
    "MessagePort",
    "MessageEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
